About overflow fix

--- a/src/css/about-page.css
+++ b/src/css/about-page.css
@@ -4,6 +4,7 @@
     background-color: white;
     height: 100vh;
     overflow: hidden;
+    position: relative;
 }
 
 .about-page{
